--- a/src/css/input.css
+++ b/src/css/input.css
@@ -1,6 +1,12 @@
+/* Google Fonts */
+@import url("https://fonts.googleapis.com/css2?family=Comfortaa:wght@400;700&family=Libre+Baskerville:wght@400;700&family=Lora&family=Montserrat:wght@400;700;900&family=Nunito+Sans:wght@400;700;900&display=swap");
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
-/* Google Fonts */
-@import url('https://fonts.googleapis.com/css2?family=Comfortaa:wght@400;700&display=swap');
+@layer base {
+  html {
+    font-family: Nunito, sans-serif;
+  }
+}
