apply some changes

--- a/src/css/input.css
+++ b/src/css/input.css
@@ -13,6 +13,23 @@
     @apply backdrop-filter backdrop-blur bg-white bg-opacity-30 shadow;
   }
 }
+/* Styling scrollbar */
+::-webkit-scrollbar {
+  width: 8px;
+}
+::-webkit-scrollbar-track {
+  @apply bg-transparent;
+}
+::-webkit-scrollbar-thumb {
+  @apply bg-gray-300 dark:bg-gray-600;
+}
+::-webkit-scrollbar-thumb {
+  border-radius: 20px;
+  background-clip: content-box;
+}
+::-webkit-scrollbar-thumb:hover {
+  @apply bg-gray-400 dark:bg-gray-700;
+}
 
 html {
   font-family: Nunito, sans-serif;
